--- a/css/styles.css
+++ b/css/styles.css
@@ -42,6 +42,10 @@ padding-right: 15px;
 margin-left: auto;
 margin-right: auto;}
 
+.section {
+padding-top: 94px;
+padding-bottom: 94px;}
+
 /*=======HEADER=======*/
 
 .header {
@@ -143,7 +147,11 @@ text-transform: uppercase;
 /*color: var(--secondary-color-accent);*/
 }
 
-.modal-btn {font-family: var(--main-font-family);
+.modal-btn {
+padding: 10px 32px;
+border: var(--color-accent);
+
+font-family: var(--main-font-family);
 font-weight: 700;
 font-size: 16px;
 line-height: 1.87;
@@ -163,7 +171,10 @@ cursor: pointer;}
 
 .benefits-list {display: flex;}
 
-.subtitle {font-family: var(--main-font-family);
+.subtitle {
+  margin-bottom: 10px;
+
+  font-family: var(--main-font-family);
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -171,7 +182,10 @@ cursor: pointer;}
 
   color: var(--basic-color-font);}
 
-.subtitle-team {font-family: var(--main-font-family);
+.subtitle-team {
+  margin-bottom: 10px;
+
+  font-family: var(--main-font-family);
   font-weight: 500;
   font-size: 16px;
   line-height: 1.18;
@@ -194,7 +208,9 @@ font-family: var(--main-font-family);
 
   color: var(--secondary-color-font);}
 
-.title {font-family: var(--main-font-family);
+.title {
+  margin-bottom: 50px;
+  font-family: var(--main-font-family);
   font-weight: 700;
   font-size: 36px;
   line-height: 1.16;
@@ -209,6 +225,16 @@ font-family: var(--main-font-family);
 /*======= END SECTION FIELD=======*/
 
 /*=======SECTION COMMAND=======*/
+
+.team {
+background: #F5F4FA;
+}
+
+.team-list {
+display: flex;
+
+flex-wrap: wrap;
+}
 
 /*=======END SECTION COMMAND=======*/
 
